plaurium ingot + creative tab

--- a/src/main/resources/assets/k9/lang/fr_fr.lang
+++ b/src/main/resources/assets/k9/lang/fr_fr.lang
@@ -1,1 +1,7 @@
 entity.K9.name=K9
+
+item.ingot_plaurium.name=Lingot de Plaurium
+
+tile.block_plaurium.name=Bloc de Plaurium
+
+itemGroup.k9tab=K9 Mod
