ore gen first part

--- a/src/main/resources/assets/k9/lang/fr_fr.lang
+++ b/src/main/resources/assets/k9/lang/fr_fr.lang
@@ -4,4 +4,6 @@ item.ingot_plaurium.name=Lingot de Plaurium
 
 tile.block_plaurium.name=Bloc de Plaurium
 
+tile.ore_overworld_plaurium.name=Minerais de Plaurium
+
 itemGroup.k9tab=K9 Mod
