--- a/src/main/resources/assets/k9/lang/en_us.lang
+++ b/src/main/resources/assets/k9/lang/en_us.lang
@@ -4,6 +4,6 @@ item.ingot_plaurium.name=Plaurium ingot
 
 tile.block_plaurium.name=Plaurium block
 
-tile.ore_overworld_plaurium.name=Plaurium Ore
+tile.ore_plaurium.name=Plaurium Ore
 
 itemGroup.k9tab=K9 Mod
