--- a/src/main/resources/assets/k9/lang/fr_fr.lang
+++ b/src/main/resources/assets/k9/lang/fr_fr.lang
@@ -1,9 +1,9 @@
 entity.K9.name=K9
 
 item.ingot_plaurium.name=Lingot de Plaurium
+item.spawner_k9.name=K9
 
 tile.block_plaurium.name=Bloc de Plaurium
-
 tile.ore_plaurium.name=Minerais de Plaurium
 
 itemGroup.k9tab=K9 Mod
