--- a/src/main/resources/assets/k9/lang/en_us.lang
+++ b/src/main/resources/assets/k9/lang/en_us.lang
@@ -2,6 +2,7 @@ entity.K9.name=K9
 
 item.ingot_plaurium.name=Plaurium ingot
 item.spawner_k9.name=K9
+item.k9_remote.name=K9 Remote
 
 tile.block_plaurium.name=Plaurium block
 tile.ore_plaurium.name=Plaurium Ore
