--- a/src/main/resources/assets/k9/lang/en_us.lang
+++ b/src/main/resources/assets/k9/lang/en_us.lang
@@ -1,5 +1,7 @@
 entity.K9.name=K9
 
+itemGroup.k9tab=K9 Mod
+
 item.ingot_plaurium.name=Plaurium ingot
 item.spawner_k9.name=K9
 item.k9_remote.name=K9 Remote
@@ -7,4 +9,4 @@ item.k9_remote.name=K9 Remote
 tile.block_plaurium.name=Plaurium block
 tile.ore_plaurium.name=Plaurium Ore
 
-itemGroup.k9tab=K9 Mod
+gui.text.teleport=Teleport K9
