--- a/src/main/resources/assets/k9/lang/fr_fr.lang
+++ b/src/main/resources/assets/k9/lang/fr_fr.lang
@@ -1,5 +1,7 @@
 entity.K9.name=K9
 
+itemGroup.k9tab=K9 Mod
+
 item.ingot_plaurium.name=Lingot de Plaurium
 item.spawner_k9.name=K9
 item.k9_remote.name=Télécommande de K9
@@ -7,4 +9,4 @@ item.k9_remote.name=Télécommande de K9
 tile.block_plaurium.name=Bloc de Plaurium
 tile.ore_plaurium.name=Minerais de Plaurium
 
-itemGroup.k9tab=K9 Mod
+gui.text.teleport=Téleporter K9
