--- a/src/main/resources/assets/k9/lang/en_us.lang
+++ b/src/main/resources/assets/k9/lang/en_us.lang
@@ -9,4 +9,8 @@ item.k9_remote.name=K9 Remote
 tile.block_plaurium.name=Plaurium block
 tile.ore_plaurium.name=Plaurium Ore
 
-gui.text.teleport=Teleport K9
+k9.gui.text.teleport=Teleport K9
+
+k9.mode.peaceful=Mode : Peaceful (DISABLED)
+k9.mode.mob_protect=Mode : Mob protection (DISABLED)
+k9.mode.full_protect=Mode : Full protection (DISABLED)
