--- a/src/main/resources/assets/k9/lang/en_us.lang
+++ b/src/main/resources/assets/k9/lang/en_us.lang
@@ -9,20 +9,22 @@ item.k9_remote.name=K9 Remote
 tile.block_plaurium.name=Plaurium block
 tile.ore_plaurium.name=Plaurium Ore
 
-k9.gui.text.teleport=Teleport K9
+k9.gui.text.teleport=Summon K9
 
-k9.mode.peaceful=Mode : Peaceful
-k9.mode.mob_protect=Mode : Mob protection
-k9.mode.full_protect=Mode : Full protection
+k9.mode.peaceful=Mode: Peaceful
+k9.mode.mob_protect=Mode: Mob protection
+k9.mode.full_protect=Mode: Full protection
 
-k9.text.not_owner=Isn't your K9 !
+k9.text.not_owner=This is not your K9 Unit
 k9.text.battery_level=Battery level
 
 k9.text.button.confirm=Let's go!
 k9.text.button.inventory=Inventory
 
-k9.remote.tooltip=You should be in survival mod to set the link between K9 and this remote
+k9.remote.tooltip=Right click your K9 wih this to bind
 
 k9.gui.text.be_in_tardis=You must be in the TARDIS to set coordinates with K9
 k9.gui.text.own_tardis=You must own a TARDIS before
-k9.gui.text.not_found_tardis=TARDIS MOD not found
+k9.gui.text.not_found_tardis=TARDIS MOD is not Installed
+
+damagesrc.k9.k9_laser=%s was killed by &s 's K9 Unit
